[project]
name = "multiprocess-stubs"
version = "0.1.0"
description = "Type stubs for the multiprocess library."
authors = [
    { name = "Yichao Zhou", email = "zyc@berkeley.edu" }
]
dependencies = [
    "multiprocess",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zhou13/multiprocess-stub"
Issues = "https://github.com/zhou13/multiprocess-stub/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multiprocess"]
